--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,81 @@
+#bannerText1
+{
+  font-family: candara;
+  font-size: 50px;
+
+}
+
+#bannerText2
+{
+  font-family: arial;
+  font-size: 20px;
+
+}
+
+.top-bar
+{
+  height: 38px;
+  width:100%;
+  background-color: #eef0f0;
+  z-index: 10;
+}
+
+.top-bar-right
+{
+  float: right;
+  padding-top: 6px;
+}
+
+.top-bar-right a
+{
+  font-size: 15px;
+}
+
+.top-bar-left
+{
+  float: left;
+  padding-top: 6px;
+
+}
+.coming-soon
+{
+  width:100%;
+  height:500px;
+  background-color: #f9f9ff;
+  margin-top: 48.67px;
+}
+
+#other-features-container
+{
+  background-color: transparent;
+}
+
+#other-features-title
+{
+  text-align: center;
+
+}
+#coming-soon-info
+{
+  width:40%;
+  height: 315px;
+  padding-top: 40px;
+  float: left;
+  margin-left: 40px;
+}
+#coming-soon-video
+{
+  float:left;
+  padding-top: 40px;
+}
+.coming-soon h2
+{
+  padding-top: 30px;
+  text-align: center;
+}
+
+
+
 /*--------------------------- Color variations ----------------------*/
 /* Medium Layout: 1280px */
 /* Tablet Layout: 768px */
@@ -48,7 +126,9 @@ body {
   font-size: 14px;
   font-weight: 300;
   line-height: 1.625em;
-  position: relative; }
+  position: relative;
+  
+   }
 
 ol,
 ul {
@@ -640,7 +720,7 @@ th {
       padding-bottom: 60px; } }
 
 .section-title {
-  padding-bottom: 75px; }
+  padding-bottom: 0px; }
   @media (max-width: 991px) {
     .section-title {
       padding-bottom: 40px; } }
@@ -730,17 +810,19 @@ th {
   box-shadow: -21.213px 21.213px 30px 0px rgba(158, 158, 158, 0.3); }
 
 .navbar-light .navbar-toggler {
-  color: #fff;
+  color: #1c3165;
   border-color: #fff; }
   .navbar-light .navbar-toggler:focus {
     outline: 0px; }
 
 .default-header {
-  position: absolute;
+  
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 9; }
+  z-index: 9;
+  background-color: white;
+   }
 
 .navbar {
   padding: 25px 15px; }
@@ -790,13 +872,13 @@ th {
     .navbar-nav li {
       padding: 10px 0; } }
 .navbar-nav li a {
-  text-transform: uppercase;
-  font-size: 12px;
+  /*text-transform: uppercase;*/
+  font-size: 20px;
   font-weight: 500;
-  color: #fff;
-  padding: 20px; }
+  color: #1c3165;
+  padding: 35px; }
 .navbar-nav .dropdown .dropdown-item {
-  color: #222222;
+  color: #ffffff;
   padding: 10px 20px;
   font-size: 11px; }
   @media (max-width: 991px) {
@@ -874,7 +956,8 @@ th {
   background-size: cover;
   height:428px;
   background-position: center center;
-  max-height: 1200px; }
+  max-height: 1200px;
+   }
   @media (min-width: 1921px) {
     .home-banner-area .fullscreen {
       align-items: start !important;
@@ -1080,7 +1163,7 @@ th {
       margin-right: 3px;
       right: 0px;
       margin-left:0px;
-      width: 345px;
+      width: 325px;
       box-shadow: rgba(55, 60, 223, 0.45) 0px 0px 5px;
 }
 .single-popular-course .details {
@@ -1207,6 +1290,7 @@ th {
 .other-feature-area .section-title p,
 .blog-post-area .section-title p {
   max-width: 300px; }
+  
 
 .other-feature-area {
   padding-top: 100px; }
@@ -1219,6 +1303,7 @@ th {
       margin-top: 0; } }
 
 .other-feature-item {
+  height:300px;
   padding: 50px 50px;
   background: #f2f3f7;
   margin-bottom: 30px;
@@ -3199,7 +3284,7 @@ h6 {
 
 /*# sourceMappingURL=main.css.map */
 .navbar-brand img{
- height: 25px;
+ height: 50px;
 }
 
 .show-more-courses {
@@ -3233,7 +3318,7 @@ h6 {
       background: linear-gradient(270deg, #2f3c8d, #79d7ff 0%, #2f3c8d 100%);
 }
 .navbar-expanded{
-  padding-top: 45px;
+  padding-top: 20px;
 }
 #search-input-box .lnr-info {
   color: #fff;
@@ -3379,7 +3464,7 @@ h6 {
   text-transform: uppercase;
   font-size: 12px;
   font-weight: 500;
-  color: #fff;
+  color: #1c3165;
   padding: 20px;
 }
 
@@ -3396,22 +3481,23 @@ h6 {
 
     .search-container {
       width: 220px;
-      height: 30px;
-      margin: 0 auto;
-      display: inherit;
+      height: 40px;
+      margin: 0 ;
+      display: inherit; 
+      float: right;     
     }
 
     input#search-bar {
       margin: 0 auto;
       width: 100%;
-      height: 30px;
+      height: 40px;
       padding: 0 20px;
       font-size: 1rem;
       border-radius: 4px;
       /* background: url(http://www.endlessicons.com/wp-content/uploads/2012/12/search-icon.png)no-repeat 100%;
       border: 1px solid #d0cfce; */
       background-size: 40px;
-      outline: none;
+      outline:none;
     }
 
     input#search-bar:focus {
@@ -3441,7 +3527,7 @@ h6 {
       right: 45px;
       width: 50px;
       height: 50px;
-      top: -10px;
+      
     }
 
   .course-form-close{
@@ -3617,7 +3703,7 @@ h6 {
   }
   .cart{
     background: transparent;
-    color: white;
+    color: #1c3165;
     border: none;
     width: 45px;
   }
